# py-netgear-plus

./: .devcontainer.json  .gitignore  CONTRIBUTING.md  HOWTO_Add_New_Models.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
.github/workflows/: ci.yml  prerelease.yml  release.yml
pages/GS105Ev2/0/: login.cgi  portStatistics.cgi  switch_info.cgi  switch_infos.json
pages/GS105Ev2/1/: portStatistics.cgi  status.cgi  switch_infos.json
pages/GS105PE/0/: portStatistics.cgi  status.cgi  switch_infos.json
pages/GS105PE/1/: login.cgi  portStatistics.cgi  switch_info.cgi  switch_infos.json
pages/GS108Ev3/: device_reboot.cgi
pages/GS108Ev3/0/: device_reboot.cgi  login.htm  portStatistics.cgi  switch_infos.json
pages/GS108Ev3/1/: login.cgi  portStatistics.cgi  status.htm  switch_info.htm  switch_infos.json
pages/GS108Ev4/0/: login.cgi  portStatistics.cgi  switch_infos.json
pages/GS108Ev4/1/: dashboard.cgi  portStatistics.cgi  switch_infos.json
pages/GS108PEv3/0/: login.htm  port_statistics.htm  switch_info.htm  switch_infos.json
pages/GS108PEv3/1/: port_statistics.htm  status.htm  switch_infos.json
pages/GS110EMX/0/: interface_stats.html  login.htm  port_settings.html  switch_infos.json  sysInfo.html
pages/GS308EP/: PoEPortConfig.cgi  dashboard.cgi  getPoePortStatus.cgi  portStatistics.cgi  switch_infos.json  unauthenticated.html
pages/GS316EPP/: dashboard.html  index.htm  interface_stats.txt  poePortConf.html
scripts/: setup
src/: netgear_plus_cli.py  py_netgear_plus_cli.py  test.py
src/netgear_plus/: __init__.py
src/py_netgear_plus/: __init__.py  fetcher.py  models.py  netgear_crypt.py  ngp_cli.py  parsers.py
tests/: .ruff.toml  GS308EP_login.cgi  __init__.py  test___init__.py
(+90 files in other folders)
