[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-netgear-plus"
dynamic = ["version"]
authors = [
  { name = "Michiel Fokke", email = "github@fokke.org" },
  { name = "Christian Karrié", email = "ckarrie@gmail.com" },
]
description = "A library for interacting with Netgear Plus switches."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
keywords = ["netgear", "plus", "switch", "api", "library"]
dependencies = ["requests", "lxml"]

[project.scripts]
ngp-cli = "py_netgear_plus.ngp_cli:main"

[project.urls]
Homepage = "https://github.com/foxey/py-netgear-plus"
Issues = "https://github.com/foxey/py-netgear-plus/issues"

[tool.hatch.version]
path = "src/py_netgear_plus/__init__.py"
